# rust-tryout

./: .gitignore  Cargo.toml  README.md
migrations/2023-03-17-173459_cost_items/: down.sql  up.sql
src/: db.rs  error_handler.rs  lib.rs  main.rs  schema.rs  swagger.rs  utils.rs
src/cost_items/: model.rs  routes.rs
